--- a/bow/platformio.ini
+++ b/bow/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = m5stack-atoms3
 framework = arduino
-lib_deps = m5stack/M5UnitSynth@^1.0.1
+lib_deps = 
+    m5stack/M5UnitSynth@^1.0.1
+    Encoder@^1.4.1
