--- a/UART_show/.vscode/launch.json
+++ b/UART_show/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/rst34/Downloads/optical_violin/UART_show/.pio/build/m5stack-atoms3/firmware.elf",
+            "executable": "/Users/ogawa/Documents/GitHub/optical_violin/UART_show/.pio/build/m5stack-atoms3/firmware.elf",
             "projectEnvName": "m5stack-atoms3",
-            "toolchainBinDir": "C:/Users/rst34/.platformio/packages/toolchain-xtensa-esp32s3/bin",
+            "toolchainBinDir": "/Users/ogawa/.platformio/packages/toolchain-xtensa-esp-elf/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/rst34/Downloads/optical_violin/UART_show/.pio/build/m5stack-atoms3/firmware.elf",
+            "executable": "/Users/ogawa/Documents/GitHub/optical_violin/UART_show/.pio/build/m5stack-atoms3/firmware.elf",
             "projectEnvName": "m5stack-atoms3",
-            "toolchainBinDir": "C:/Users/rst34/.platformio/packages/toolchain-xtensa-esp32s3/bin",
+            "toolchainBinDir": "/Users/ogawa/.platformio/packages/toolchain-xtensa-esp-elf/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/rst34/Downloads/optical_violin/UART_show/.pio/build/m5stack-atoms3/firmware.elf",
+            "executable": "/Users/ogawa/Documents/GitHub/optical_violin/UART_show/.pio/build/m5stack-atoms3/firmware.elf",
             "projectEnvName": "m5stack-atoms3",
-            "toolchainBinDir": "C:/Users/rst34/.platformio/packages/toolchain-xtensa-esp32s3/bin",
+            "toolchainBinDir": "/Users/ogawa/.platformio/packages/toolchain-xtensa-esp-elf/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
