--- a/UART_show/platformio.ini
+++ b/UART_show/platformio.ini
@@ -8,11 +8,29 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = atoms3
+
 [env:m5stack-atoms3]
 platform = espressif32
 board = m5stack-atoms3
 framework = arduino
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.2.0
 lib_deps = 
 	m5stack/M5Unified@^0.1.16
-    m5stack/M5UnitSynth@^1.0.1
-    ; keyboard
+	m5stack/M5UnitSynth@^1.0.1
+
+[env:atoms3]
+platform = espressif32
+framework = arduino
+board = m5stack-atoms3
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.2.0
+lib_deps = 
+	m5stack/M5Unified
+	m5stack/M5UnitSynth
+build_flags =   
+    -ARDUINO_USB_CDC_ON_BOOT=1
+    -ARDUINO_USB_MODE=1
+compiler_optimization = -Os
